correction mobile device

--- a/style.scss
+++ b/style.scss
@@ -28,18 +28,58 @@ $primary: #9356DC;
 $secondary: #FF79DA;
 $footer: #353535;
 
-@mixin raduis-shadow {
+
+@mixin radius-shadow {
   border-radius: 5px;
   box-shadow: -1px 5px 13px 0px rgba(0,0,0,0.21);
 }
-// @media screen and (max-width: 600px) {
+
+// Debut des @media //
+
+@media screen
+  and (min-width: 702px)
+  and (max-width: 1000px) {
+
+    .dp_header_logo {
+      font-size: 45px;
+    }
+    .dp_under-header-loc {
+      display: flex;
+      justify-content: center;
+    }
+    .fa-map-marker-alt::before {
+      height: 50px;
+      margin-right: 15px;
+  }
+  .dp_fonction-btn {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-right: 15px;
+  }
+}
+
+@media screen
+  and (max-width: 701px) {
+    .fa-map-marker-alt::before {
+      height: 50px;
+      margin-left: 30vw;
+      margin-right: 15px;
+    }
+
+    .dp_fonction-btn {
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+    }
+
+  }
 
 .dp_bloc-page {
   overflow: hidden !important;
 }
 
 .dp_header {
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,10 +89,11 @@ $footer: #353535;
   box-shadow: -1px 5px 13px 0px rgba(0,0,0,0.21);
   color: #ff0000;
   .dp_header_logo {
-    width: 50vw;
+
+    font-family: 'Shrikhand';
+    font-weight: 600;
   }
 }
-
 
 .dp_under-header {
   display: flex;
@@ -74,13 +115,6 @@ $footer: #353535;
 }
 
 
-
-
-.fa-map-marker-alt::before {
-  height: 50px;
-  margin-left: 30vw;
-  margin-right: 15px;
-}
 
 .dp_under-header-title {
   text-align: center;
@@ -106,6 +140,7 @@ $footer: #353535;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   height: 55px;
   background: rgb(255,121,218);
   background: linear-gradient(162deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
@@ -117,7 +152,6 @@ $footer: #353535;
     background: linear-gradient(162deg, rgba(255,121,218,1) 0%, rgba(147,86,220,0.65) 100%);
   }
 }
-
 
 
 .dp_under-header-button {
@@ -136,11 +170,7 @@ $footer: #353535;
   font-family: 'Roboto';
 }
 
-.dp_fonction-btn {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-}
+
 
 .dp_fonction-choice {
   display: flex;
@@ -150,7 +180,7 @@ $footer: #353535;
   padding: 15px;
   margin: 10px;
   box-shadow: -1px 5px 13px 0px rgba(0,0,0,0.21);
-
+  cursor: grab;
 }
 
 .dp_fonction-choice:hover {
@@ -160,7 +190,7 @@ $footer: #353535;
 
 .dp_fonction-choice:hover .fas {
     color: #9356DC;
-  }
+}
 
 .dp_fonction-btn-numbers {
   margin-left: -35px;
@@ -222,27 +252,50 @@ $footer: #353535;
   height: 250px;
   margin-top: 25px;
   border-radius: 18px;
-
-}
-
-.dp_main-restaurants-bloc-vignette:hover {
-    opacity: 0.75;
-    transform: scale(1.01);
-    transition: 0.4s;
-
+  &:hover {
+      opacity: 0.75;
+      transform: scale(1.01);
+      transition: 0.4s;
   }
+  .dp_main-restaurants-bloc-vignette-txt {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 1rem;
+    height: 70px;
+    .dp_main-restaurants-bloc-vignette-txt-loc {
+      width: 80%;
+      padding-bottom: 10px;
+    }
+  }
+}
+// Like heart
 
-.dp_main-restaurants-bloc-vignette-txt {
+.dp-heart {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  padding-left: 1rem;
-  height: 70px;
-  .dp_main-restaurants-bloc-vignette-txt-loc {
-    width: 80%;
-    padding-bottom: 10px;
+  position: relative;
+  .fa-heart {
+    position: absolute;
+          font-size: 1.8rem;
+
   }
-}
+  }
+
+  .fa-heart:hover {
+
+     font-weight: bold;
+     color: rgb(255,121,218);
+     color: linear-gradient(162deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
+     background-color: #FFF;
+     border-radius: 50%;
+     transition: color .5s ease-out;
+    }
+
+    .heart-nobg:hover {
+      opacity: 0;
+    }
+
 
 .dp_main-img {
   object-fit: cover;
@@ -267,7 +320,7 @@ $footer: #353535;
   width: 4.5rem;
   height: 1rem;
   font-size: 15px;
-  @include raduis-shadow;
+  @include radius-shadow;
   color: $new-txt;
   font-weight: 500;
 }
@@ -286,7 +339,13 @@ footer {
     font-size: 18px;
     color: white;
     }
+
   }
+
+.dp_footer-link a:hover {
+    color: $secondary;
+    transition: 0.4s;
+}
 
   .a_roboto {
     font-family: 'Roboto';
@@ -303,15 +362,7 @@ footer {
     font-weight: 400;
     margin: 0;
     height: 75px;
+    .dp_footer_link_logo {
+      font-weight: 500;
+    }
   }
-
-
-
-
-.dp_footer_link_logo {
-  font-weight: 500;
-}
-
-.fa-heart .heart_nobg {
-  display: none;
-}
